--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "bootswatch": "^5.3.0",
     "moment": "^2.29.4",
+    "mongoose": "^7.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
