--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=4000
+LINKEDIN_CLIENT_ID=778795asmyzj99
+LINKEDIN_CLIENT_SECRET=BaP545f9DoYYQZWP
+LINKEDIN_REDIRECT_URI=http://localhost:4000/signin/linkedin
