--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "bootswatch": "^5.3.0",
+    "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "mongoose": "^7.2.3",
     "react": "^18.2.0",
